<resources>
    <string name="app_name">MuscleTracking</string>

    <!-- タイトル -->
    <string name="label_login">Login</string>
    <string name="label_register_user">新規登録</string>
    <string name="label_input_height_and_weight">身長体重入力</string>
    <string name="label_top">Welcome To MuscleTracking!</string>
    <string name="label_body_comp">体組成データ</string>
    <string name="label_home">ホーム</string>
    <string name="label_log">ログ追加</string>
    <string name="label_log_history">ログ履歴</string>
    <string name="label_log_detail">ログ詳細</string>

    <!-- 入力 -->
    <string name="label_id">ユーザーID</string>
    <string name="input_id">ユーザーID</string>
    <string name="label_name">ユーザー名</string>
    <string name="input_name">ユーザー名</string>
    <string name="label_pw">パスワード</string>
    <string name="input_pw">パスワード</string>
    <string name="label_height">身長</string>
    <string name="input_height">身長</string>
    <string name="label_weight">体重</string>
    <string name="input_weight">体重</string>
    <string name="label_calendar">日付</string>
    <string name="label_training_weight">重量</string>
    <string name="label_training_count">回数</string>
    <string name="label_training_muscle_groups">トレーニング部位</string>
    <string name="label_training_menus">トレーニングメニュー</string>
    <string name="label_training_menus_short">メニュー</string>
    <string name="label_bmi">BMI</string>
    <string name="label_bfp">体脂肪率</string>
    <string name="label_lbm">除脂肪体重</string>


    <!-- ボタンテキスト -->
    <string name="bt_login">Login</string>
    <string name="bt_register_user">新規登録</string>
    <string name="bt_log">記録する</string>
    <string name="bt_show_history">記録を見る</string>
    <string name="bt_log_add">ADD</string>
    <string name="bt_confirm">登録</string>
    <string name="bt_modify">修正</string>
    <string name="bt_delete">削除</string>
    <string name="bt_complete">完了</string>
    <string name="bt_search_log">検索</string>
    <string name="bt_clear">クリア</string>
    <string name="bt_select">選択</string>
    <string name="bt_add_menu">メニュー追加</string>

    <!-- テキスト -->
    <string name="txt_to_register">アカウントをお持ちでないですか？ Sign Up</string>
    <string name="txt_to_register_highlight">Sign Up</string>
    <string name="txt_to_login">すでにアカウントをお持ちですか？ Log In</string>
    <string name="txt_to_login_highlight">Log In</string>
    <string name="txt_register_user_complete">ユーザー登録ありがとうございます！</string>
    <string name="txt_no_find_log_history">検索結果がありません。</string>
    <string name="txt_no_find_data">データはありません。</string>
    <string name="txt_hint_log_memo">メモを入力</string>
    <string name="txt_select">選択してください</string>

    <!-- ダイアログ-->
    <string name="txt_select_menu_add">メニューを入力してください</string>
    <string name="bt_dialog_add_menu">追加</string>
    <string name="bt_dialog_cancel">キャンセル</string>
    <string name="bt_dialog_delete">削除</string>
    <string name="bt_dialog_modify">修正</string>
    <string name="msg_dialog_delete">このログを削除します。\nよろしいですか？</string>
    <string name="msg_dialog_modify">このログを修正します。\nよろしいですか？</string>

    <!-- バリデーションメッセージ -->
    <string name="msg_no_input_userid">ユーザーIDを入力してください</string>
    <string name="msg_no_accept_userid">ユーザーIDは英数字で入力してください</string>
    <string name="msg_no_input_username">ユーザー名を入力してください</string>
    <string name="msg_no_accept_username">ユーザー名は英数字で入力してください</string>
    <string name="msg_no_input_password">パスワードを入力してください</string>
    <string name="msg_no_accept_password">パスワードは英数字で入力してください</string>
    <string name="msg_no_input_height">身長を入力してください</string>
    <string name="msg_no_input_weight">体重を入力してください</string>
    <string name="msg_no_input_training_weight">重量を入力してください</string>
    <string name="msg_no_input_training_count">回数を入力してください</string>
    <string name="msg_no_input_training_menu">メニューを選択してください</string>
    <string name="msg_can_not_login">ユーザーIDとパスワードが一致しません</string>
    <string name="msg_can_not_find_user">ユーザーIDが存在しません。\n新規登録してください。</string>
    <string name="msg_can_not_register">このユーザーIDはすでに使われています。</string>
    <string name="msg_can_not_update">更新ができませんでした</string>
    <string name="msg_can_not_login_error">ログインに失敗しました。\n時間をおいて再実行してください。</string>

    <!-- メニュー -->
    <string name="menu_home">ホーム</string>
    <string name="menu_log_history">ログ履歴</string>
    <string name="menu_log">ログ</string>
    <string name="menu_body_comp">体組成</string>
    <string name="menu_training_menu_master">トレーニングメニュー管理</string>
    <string name="menu_dark_mode">ダークモード切り替え</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>